# natsort-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  benchmark.py  pyproject.toml
.cargo/: config  config.toml
.github/workflows/: build.yml
natsort_rs/: __init__.py
src/: lib.rs
tests/: test_natsort.py
