[package]
name = "natsort-rs"
description = "A blazing fast natural sorting library for Python"
version = "0.1.5"
edition = "2021"
repository = "https://github.com/valentinstn/natsort-rs"
license_file = "LICENSE"

[lib]
name = "natsort_rs"
crate-type = ["cdylib"]

[dependencies]
human-sort = "0.2.2"
pyo3 = "0.19.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.