[package]
name = "natsort-rs"
description = "A blazing fast natural sorting library for Python"
version = "0.1.10a"
edition = "2021"
repository = "https://github.com/valentinstn/natsort-rs"
license_file = "LICENSE"
license = "MIT"

[lib]
name = "natsort_rs"
crate-type = ["cdylib"]

[dependencies]
natord = "1.0.9"
pyo3 = "0.19.2"
rayon = "1.8.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
strip = true