[package]
name = "natsort-rs"
description = "A blazing fast natural sorting library for Python"
version = "0.1.17"
edition = "2021"
repository = "https://github.com/valentinstn/natsort-rs"
license = "MIT"

[lib]
name = "natsort_rs"
crate-type = ["cdylib"]

[dependencies]
natord = "1.0.9"

[dependencies.pyo3]
version = "0.27.2"
features = ["generate-import-lib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
strip = true
