[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "natsort-rs"
description = "A blazing fast natural sorting library for Python"
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/valentinstn/natsort-rs"
Repository = "https://github.com/valentinstn/natsort-rs"
Changelog = "https://github.com/valentinstn/natsort-rs/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "maturin>=1.0,<2.0", 
  "natsort>=8.0.0", 
  "tomark>=0.1.0"
]

